end first phase of refactor AddFoodViewController
Co-authored-by: Kevin Vandervaeren <kevin.vandervaeren@ulb.be>
Co-authored-by: Kevin Issa <kevin.issa@ulb.be>